# API/controllers/Assets.js
@@ -1,4 +1,5 @@
 const Asset = require('../models/Asset');
+const { Op } = require('sequelize');
 
 // Create a new asset
 
@@ -49,14 +50,14 @@ exports.updateAsset = async (req,res) => {
     const { id } = req.params;
     const { asset } = req.body;
     try {
-        const asset = await Asset.findByPk(id);
-        if (!asset) {
+        const existingAsset = await Asset.findByPk(id);
+        if (!existingAsset) {
             res.ststus(404).json({ message: "[ASSETS-006] Asset not found"});
         }
         // Making sure asset is unique
-        const exisingEmail = await User.findOne({ where: {asset: asset }});
-        if (exisingEmail) {
-            res.status(409).json({ message: '[ASSETS-002] Asset already exists', exisingEmail });
+        const uniqueAsset = await Asset.findOne({ where: {asset: asset }});
+        if (uniqueAsset) {
+            res.status(409).json({ message: '[ASSETS-002] Asset already exists', uniqueAsset });
         };
         await asset.update({ asset:asset || asset.asset });
         res.ststus(201).json({ mesaage: "[ASSETS-008] Updated seccessfully.", asset})
@@ -78,5 +79,23 @@ exports.deleteAsset = async (req, res) => {
         res.ststus(200).json({ message: "[ASSETS-009] Asset deleted:", asset});
     }catch(error){
         res.ststus(500).json({ message: "[ASSETS-007] Can't delete asset:", error: error.message});
+    }
+}
+
+// Get asses by partial match
+
+exports.getAssetByDescription = async (req,res) => {
+    const { description } = req.body;
+    try {
+        const asset = await Asset.findAll({ 
+            where:{
+                description: {
+                    [Op.iLike]: `%${description}%`,
+                },
+            }});
+        console.log(description);
+        res.status(200).json(asset);
+    }catch(error){
+        res.status(500).json({ message: "[ASSETS-010] Can't execute operation on assets", error:error.message});
     }
 }
